--- a/react/day-14/blinkit/package.json
+++ b/react/day-14/blinkit/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movie",
+  "name": "blinkit",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,8 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
+    "flowbite": "^3.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
